# custom-coding-agents

./: .env.example  .gitignore  README.md  pyproject.toml
agents/fluent-pythonista/: README.md  pyproject.toml  test_core.py
agents/fluent-pythonista/src/pyagent/: __main__.py  agent.py  config.py  context.py  memory.py  prompts.py  rag.py  writer.py
agents/fluent-pythonista/src/pyagent/tools/: refactor.py
agents/pythonista-agent/: README.md  pyproject.toml  test_core.py
agents/pythonista-agent/src/pyagent/: __init__.py  __main__.py  agent.py  config.py  context.py  logging.py  memory.py  plan_model.py  prompts.py  rag.py  writer.py
agents/pythonista-agent/src/pyagent/tools/: base.py  explainer.py  refactor.py  reviewer.py
agents/software-architect/: README.md  agent.py  main.py  pyproject.toml  rag.py  test_archagent.py  tools.py
agents/software-architect/src/archagent/: __init__.py  __main__.py  agent.py  config.py  logging.py  memory.py  prompts.py  rag.py  tools.py
agents/software-architect/src/archagent/tools/: __init__.py  definitions.py  executor.py
collage-maker-refactor-example/after/: README.md  config.py  database.sqlite-shm  database.sqlite-wal  main.py  pyproject.toml  requirements.txt
collage-maker-refactor-example/after/collage_maker/application/: __init__.py
collage-maker-refactor-example/after/collage_maker/application/use_cases/: __init__.py  create_collage.py  delete_collage.py  list_collages.py  rename_collage.py
collage-maker-refactor-example/after/collage_maker/domain/: __init__.py  exceptions.py
collage-maker-refactor-example/after/collage_maker/domain/events/: __init__.py  collage_events.py
collage-maker-refactor-example/after/collage_maker/domain/model/: __init__.py  canvas.py  collage.py  keyword.py
collage-maker-refactor-example/after/collage_maker/domain/ports/: __init__.py  collage_repository.py  collage_storage.py  reference_image_source.py
collage-maker-refactor-example/after/collage_maker/domain/services/: __init__.py  composition.py  keyword_extraction.py  subject_isolation.py
collage-maker-refactor-example/after/collage_maker/infrastructure/: __init__.py
collage-maker-refactor-example/after/collage_maker/infrastructure/image_sourcing/: __init__.py  google_image_fetcher.py
collage-maker-refactor-example/after/collage_maker/infrastructure/persistence/: __init__.py  database.py  orm_models.py  sqlite_collage_repository.py
collage-maker-refactor-example/after/collage_maker/infrastructure/rendering/: __init__.py  composition_renderer.py  opencv_renderer.py
collage-maker-refactor-example/after/collage_maker/infrastructure/storage/: __init__.py  local_disk_storage.py
collage-maker-refactor-example/after/collage_maker/presentation/: __init__.py  app.py  dependencies.py
collage-maker-refactor-example/after/collage_maker/presentation/models/: __init__.py  requests.py  responses.py
collage-maker-refactor-example/after/collage_maker/presentation/routes/: __init__.py  collage_routes.py
collage-maker-refactor-example/after/collage_maker/presentation/templates/: image.html  index.html
collage-maker-refactor-example/after/tests/fakes/: fake_collage_repository.py  fake_collage_storage.py  fake_image_source.py
collage-maker-refactor-example/after/tests/integration/: test_sqlite_repository.py
collage-maker-refactor-example/after/tests/unit/application/: test_create_collage.py
collage-maker-refactor-example/after/tests/unit/domain/: test_collage.py  test_composition.py  test_keyword_extraction.py
collage-maker-refactor-example/before/: ARCHITECTURE_REVIEW.md
collage-maker-refactor-example/before/old-collage-try/: main.py
collage-maker-refactor-example/before/old-collage-try/app/: settings.py
collage-maker-refactor-example/before/old-collage-try/app/NLP/: important_words.py
collage-maker-refactor-example/before/old-collage-try/app/computer_vision/: collage_generator.py  edge_detector.py  rectangle.py
collage-maker-refactor-example/before/old-collage-try/app/web_scraper/: image_search.py
collage-maker-refactor-example/before/old-collage-try/app_tests/test_NLP/: test_important_words.py
collage-maker-refactor-example/before/old-collage-try/app_tests/test_computer_vision/: test_edge_detector.py  test_object_handler.py
collage-maker-refactor-example/before/old-collage-try/app_tests/test_web_scraper/: test_image_search.py
collage-maker-refactor-example/before/old-collage-try/db/: database.py
collage-maker-refactor-example/before/old-collage-try/db/models/: collage.py
docs/: architecture_patterns.md
docs/architecture/: design_influences.md  general_rules.md
docs/python/: anti_patterns.md  architecture_patterns.md  python_standards.md  refactoring_playbook.md  review_rubric.md  tech_stack.md
