[project]
name = "custom-coding-agents"
version = "0.1.0"
description = "Custom coding agents — a uv workspace containing pyagent (Python-focused reviewer/refactorer) and archagent (software-architecture advisor)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyagent",
    "archagent",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[tool.uv]
# The workspace root is a virtual project — it has dependencies but
# is not itself a package to be built or distributed.  Only its
# members produce wheels.
package = false

[tool.uv.workspace]
members = [
    "agents/pythonista-agent",
    "agents/software-architect",
]

[tool.uv.sources]
pyagent = { workspace = true }
archagent = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # type-checking imports
    "RUF",  # ruff-specific rules
    "S",    # flake8-bandit (security)
    "C4",   # flake8-comprehensions
    "PTH",  # flake8-use-pathlib
    "RET",  # flake8-return
    "ARG",  # flake8-unused-arguments
]

[tool.ruff.lint.isort]
known-first-party = ["pyagent", "archagent"]
