[project]
name = "archagent"
version = "0.1.0"
description = "Software-architecture advisor — conversational agent grounded in DDD, Clean, Hexagonal, and Onion Architecture."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "numpy>=2.0",
    "sentence-transformers>=3.0",
]

[project.scripts]
archagent = "archagent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/archagent"]
