[project]
name = "after"
version = "0.2.0"
description = "Old Collage Try Redux"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "imutils>=0.5.4",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "opencv-contrib-python>=4.13.0.92",
    "pillow-heif>=1.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.3",
    "ultralytics>=8.4.37",
    "uvicorn[standard]>=0.44.0",
    "werkzeug>=3.1.8",
    "wordcloud>=1.9.6",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
]
